feat: fix public download
