# backend/src/main/java/com/tribly/api/routes/DownloadPublicResource.java
@@ -1,0 +1,7 @@
+package com.tribly.api.routes;
+
+import jakarta.ws.rs.Path;
+
+@Path("/api/download/public/teams/{slug}/routes/{routeId}")
+public class DownloadPublicResource extends AbstractDownloadResource{
+}
