# backend/src/main/java/com/tribly/api/routes/DownloadTeamResource.java
@@ -1,0 +1,7 @@
+package com.tribly.api.routes;
+
+import jakarta.ws.rs.Path;
+
+@Path("/api/download/team/teams/{slug}/routes/{routeId}")
+public class DownloadTeamResource extends AbstractDownloadResource{
+}
